--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <header id="header" class="flex justify-between items-center mb-8 bg-white rounded-2xl p-6 shadow-sm">
 <div class="flex items-center gap-3">
   <i class="fa-solid fa-staff-snake text-blue-600 text-2xl"></i>
-  <h1 class="text-2xl font-bold text-gray-900">AI Medical Diagnosis | Symptoms to Results</h1>
+  <h1 class="text-2xl font-bold text-gray-900">AI Medical Diagnosis</h1>
 </div>
 <div class="flex gap-4">
                     <div class="relative">
