feat: AI Medical Diagnosis

--- a/index.html
+++ b/index.html
@@ -454,6 +454,28 @@
 </div>
 </div>
 </div>
+
+<!-- Footer -->
+<footer class="bg-white mt-8 rounded-xl shadow-sm p-6">
+    <div class="max-w-6xl mx-auto">
+        <div class="flex flex-col md:flex-row justify-between items-center gap-4">
+            <div class="text-gray-600">
+                © 2025 AI Medical Diagnosis. All rights reserved.
+            </div>
+            <div class="flex items-center gap-4">
+                <a href="https://www.linkedin.com/in/samet-utku-olgun/" target="_blank" class="text-gray-600 hover:text-blue-600 transition-colors flex items-center gap-2">
+                    <i class="fab fa-linkedin text-xl"></i>
+                    <span>LinkedIn</span>
+                </a>
+                <a href="https://github.com/smtkuo/ai-medical-diagnosis" target="_blank" class="text-gray-600 hover:text-gray-900 transition-colors flex items-center gap-2">
+                    <i class="fab fa-github text-xl"></i>
+                    <span>GitHub</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Initialize state manager
